// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components ListItem should renders correctly with a subtitle 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingVertical": 10,
      },
      Object {
        "borderBottomColor": "#96A5B3",
        "borderBottomWidth": 0.5,
      },
    ]
  }
>
  <ForwardRef(Text)>
    My title
  </ForwardRef(Text)>
  <ForwardRef(Text)
    style={
      Object {
        "color": "#96A5B3",
        "marginLeft": 2,
      }
    }
  >
    My subtitle
  </ForwardRef(Text)>
</ForwardRef(View)>
`;

exports[`Components ListItem should renders correctly with a subtitle and last 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingVertical": 10,
      },
      null,
    ]
  }
>
  <ForwardRef(Text)>
    My title
  </ForwardRef(Text)>
  <ForwardRef(Text)
    style={
      Object {
        "color": "#96A5B3",
        "marginLeft": 2,
      }
    }
  >
    My subtitle
  </ForwardRef(Text)>
</ForwardRef(View)>
`;

exports[`Components ListItem should renders correctly with a title 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingVertical": 10,
      },
      Object {
        "borderBottomColor": "#96A5B3",
        "borderBottomWidth": 0.5,
      },
    ]
  }
>
  <ForwardRef(Text)>
    test
  </ForwardRef(Text)>
</ForwardRef(View)>
`;

exports[`Components ListItem should renders correctly with an info right 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingVertical": 10,
      },
      Object {
        "borderBottomColor": "#96A5B3",
        "borderBottomWidth": 0.5,
      },
    ]
  }
>
  <ForwardRef(Text)>
    My title
  </ForwardRef(Text)>
  <ForwardRef(View)
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <ForwardRef(Text)
    style={
      Object {
        "color": "#96A5B3",
        "marginLeft": 2,
      }
    }
  >
    Info right
  </ForwardRef(Text)>
</ForwardRef(View)>
`;
